--- a/IoTdeviceV1.ioc
+++ b/IoTdeviceV1.ioc
@@ -63,11 +63,8 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.GPIOParameters=PinState,GPIO_Label
-PA4.GPIO_Label=SPI1_CS
-PA4.Locked=true
-PA4.PinState=GPIO_PIN_SET
-PA4.Signal=GPIO_Output
+PA4.Mode=NSS_Signal_Hard_Output
+PA4.Signal=SPI1_NSS
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -140,10 +137,10 @@ RCC.USART1Freq_Value=32000000
 RCC.VCOOutput2Freq_Value=4000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CalculateBaudRate=4.0 MBits/s
-SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
